--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </head>
 
         <body>
+            <!-- Activity 1:
             <h2>This is a heading</h2>
             <div class="container">
                 <h2>This is another heading</h2>
@@ -21,6 +22,14 @@
                             <li>2.2</li>
                         </ul>
                     </li>
-                </ul></div>
+                </ul></div> -->
+
+
+                <a title="BCIT homepage" href="https://bcit.ca">Links</a>
+                <ul> 
+                    <li><a title ="programs" href="https://www.bcit.ca/study/">Programs</a></li>
+                    <li><a title ="admission" href="https://www.bcit.ca/admission">Admission</a></li>
+                </ul>
+
         </body>
     </html>
